--- a/src/index.css
+++ b/src/index.css
@@ -124,8 +124,27 @@ body {
   width: 100%;
   height: 100%;
   background-image: url("https://upload.wikimedia.org/wikipedia/commons/7/76/1k_Dissolve_Noise_Texture.png");
-  animation: grain 2s steps(1) infinite;
+  animation: grain 1s steps(1) infinite;
   opacity: 0.1;
   z-index: 1;
   pointer-events: none;
+}
+
+.image-container {
+  width: 25rem; /* Set fixed width */
+  height: auto; /* Set fixed height */
+  overflow: hidden; /* Crop anything outside */
+  position: relative;
+}
+
+.custom-cropped-image {
+  width: 100%;
+  height: 150%; /* Increase to zoom */
+  object-fit: cover;
+  position: absolute;
+  top: -25%; /* Moves image upwards to crop from top */
+}
+
+.hover\:glow-effect:hover {
+  filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.8));
 }
